# 21212-Labs-2nd-course-CPP

./: .gitignore  README.md
DoodleTest3/: DoodleTest3.pro  Factory.h  GameUnitFactory.h  ItemFactory.h  controller.cpp  controller.h  defaultstep.cpp  defaultstep.h  defaultstep_Qt.cpp  defaultstep_Qt.h  doodleview.cpp  doodleview.h  drawingitem.cpp  drawingitem.h  gamefield.cpp  gamefield.h  gameunit.cpp  gameunit.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  player_Qt.cpp  player_Qt.h  preferences.h  pressedkeys.cpp  pressedkeys.h  resources.qrc
job1-FlatMapAdvanced/: CMakeLists.txt  FlatMap.h  FlatMapTests.cpp  main.cpp
job1-flatmap/: FlatMap.h
job2-Forth/: ArithmeticOperators.cpp  ArithmeticOperators.h  CMakeLists.txt  Command.h  CommandFactory.h  CommandFactoryRegistrations.h  CommandManager.cpp  CommandManager.h  ConditionalOperator.cpp  ConditionalOperator.h  Factory.h  Forth  Forth.cpp  Forth.h  ForthFactory.h  FunctionClearStack.h  FunctionGetCommandType.h  Functions.cpp  Functions.h  InBuildOperators.cpp  InBuildOperators.h  LogicOperators.cpp  LogicOperators.h  Loop.cpp  Loop.h  MyExceptions.h  OutputOperators.cpp  OutputOperators.h  Singleton.h  main.cpp
job2-Forth-2/: CMakeLists.txt  CommandManager.cpp  CommandManager.h  Forth  Forth.cpp  Forth.h  main.cpp
job2-Forth-2/Containers/: Factory.h  SingletonHolder__Heap.h  SingletonHolder__Static.h
job2-Forth-2/ForthCommands/: ArithmeticOperators.cpp  ArithmeticOperators.h  InBuildOperators.cpp  InBuildOperators.h  OutputOperators.cpp  OutputOperators.h
job2-Forth-2/ForthCommands/Base/: Command.h  CommandFactoryRegistration.h  Function__ClearStack.h  Singleton__CommandFactory.h
job2-Forth-3/: CMakeLists.txt  CommandManager.cpp  CommandManager.h  Forth.cpp  Forth.h  main.cpp
job2-Forth-3/Containers/: Factory.h  SingletonHolder__Heap.h
job2-Forth-3/ForthCommands/: ArithmeticOperators.cpp  ArithmeticOperators.h  Conditional.cpp  Conditional.h  InBuildOperators.cpp  InBuildOperators.h  LogicOperators.cpp  LogicOperators.h  Loop.cpp  Loop.h  OutputOperators.cpp  OutputOperators.h
job2-Forth-3/ForthCommands/Base/: Command.h  CommandFactoryRegistration.h  CommandManager.cpp  CommandManager.h  Function__CheckStack.h  Singleton__CommandFactory.h
job2-Forth-3/Streams/: CurrentStreams.cpp  CurrentStreams.h
job2-Forth-3/UnitTests/: Tests.cpp
